docs/envoy/v1.23.6/_sources/api-v3/extensions/network/connection_balance/dlb/v3alpha/dlb.proto.rst.txt
.. _envoy_v3_api_file_contrib/envoy/extensions/network/connection_balance/dlb/v3alpha/dlb.proto:

Dlb connection balancer configuration (proto)
=============================================




.. _extension_envoy.network.connection_balance.dlb:

This extension has the qualified name ``envoy.network.connection_balance.dlb``


.. note::
  This extension is only available in :ref:`contrib <install_contrib>` images.


.. note::
  This extension is functional but has not had substantial production burn time,
  use only with this caveat.

  This extension is not hardened and should only be used in deployments
  where both the downstream and upstream are trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.network.connection_balance <extension_category_envoy.network.connection_balance>`



DLB :ref:`configuration overview <config_connection_balance_dlb>`.

.. _envoy_v3_api_msg_extensions.network.connection_balance.dlb.v3alpha.Dlb:

extensions.network.connection_balance.dlb.v3alpha.Dlb
-----------------------------------------------------

:repo:`[extensions.network.connection_balance.dlb.v3alpha.Dlb proto] <api/contrib/envoy/extensions/network/connection_balance/dlb/v3alpha/dlb.proto#L28>`

The Dlb is a hardware managed system of queues and arbiters connecting producers and consumers. It is a PCIE device
in the CPU package. It interacts with software running on cores and potentially other devices. The Dlb implements the
following balancing features:

-  Lock-free multi-producer/multi-consumer operation.
-  Multiple priorities for varying traffic types.
-  Various distribution schemes.

Dlb connection balancer uses Dlb hardware to balance connections, and can significantly reduce latency.

As the Dlb connection balancer provides assistance from dedicated Dlb hardware, it can be used for a proxy with a large number of connections
(e.g., a gateway).



